[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-devknife-toolkit"
version = "0.1.0"
description = "Python으로 구현된 일상적인 개발자 유틸리티를 통합한 올인원 터미널 툴킷"
authors = [
    {name = "DevKnife Team", email = "team@devknife.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "textual>=0.40.0",
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
devknife = "devknife.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["devknife*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true